[package]
name = "image-resize-rust"
version = "0.1.0"
authors = ["Emil Privér <emil@priver.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
reqwest = { version = "0.11.10", features = ["blocking"] }
image = { version = "0.24.1", default-features = false, features = ["gif", "avif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
nanorand = { version = "0.5.2"}
webp = "0.2.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
